$Id: ChangeLog,v 1.120 2004/09/19 11:23:11 haraldkipp Exp $

2004-09-19  Harald Kipp  <harald.kipp@egnite.de>

	* app/logtime/logtime.c, app/logtime/Makefile: New application
	demonstrates usage of syslog and SNTP.

	* include/sys/syslog.h, pro/syslog.c, pro/Makefile, 
	conf/pro/pro.nut: Syslog protocol added.


2004-09-17  Ole Reinhardt <ole.reinhardt@kernelconcepts.de>
	* dev/hd44780_bus, dev/sja1000.c
	Added #ifdef __GNUC__ statement since both drivers are not ported 
	to icc by now... Anybody wants to port them

2004-09-17  Harald Kipp  <harald.kipp@egnite.de>

	* tools/nutconf/Makefile: Ole removed tooloptdlg.o, which
	was correct to get it compiled. But the real problem was,
	that I forget to commit all changes. So tooloptdlg.o
	has been added again.

	* tools/nutconf/tooloptdlg.cpp, tools/nutconf/tooloptdlg.h, 
	tools/nutconf/nutconf.cpp, tools/nutconf/settings.cpp,
	tools/nutconf/settings.h, tools/nutconf/settingsdlg.cpp,
	tools/nutconf/settingsdlg.h: New settings page for tool 
	options added.

	* tools/nutconf/nutcomponent.c, tools/nutconf/nutcomponent.h,
	tools/nutconf/nutconfdoc.cpp: 
	INCFIRST and INCLAST definitions added to application sample 
	directory building.


2004-09-16  Ole Reinhardt <ole.reinhardt@kernelconcepts.de>
	* os/Makefile
	Changed position of LIBDIR to support correct install directory for 
	nutinit.o and libnutos.a

2004-09-12  Harald Kipp  <harald.kipp@egnite.de>

	* doc/gen/nut_en.cfg: Updated version and using default
	installation path.

	* doc/gen/nutdoc_en.txt: Old history, stream and init 
	removed. Version updated.

	* tools/crurom/Makefile: Target install added.

	* tools/nutconf/Makefile: Target install and tooloptdlg.o
	added.

	* tools/packaging/ethernut-3.9-1.spec: RPM spec file
	added.


2004-09-10  Harald Kipp  <harald.kipp@egnite.de>

	* eboot/ether.c: Added minimal "EEPROM emulation" to support
	Ethernut 1.3 Rev-G boards. To squeeze it again in 4kByte,
	the broadcast, gateway and dns had been removed.
